k8s/apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiveline
  labels:
    project: fiveline
    managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
