k8s/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiveline-ingress
  namespace: fiveline
  labels:
    project: fiveline
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: fiveline-alb
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/subnets: subnet-0f35b84275ceb6945,subnet-0e827ebd0c83592c3
    alb.ingress.kubernetes.io/wafv2-web-acl-arn: "arn:aws:wafv2:ap-northeast-2:089955620282:regional/webacl/fiveline-regional-waf/f076c127-acea-423d-a48d-8aa0f01f1ef7"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/auth/admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8004
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8002
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8003
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8003
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8004
          - path: /api/health
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8004
